--- a/quickstart/build.gradle
+++ b/quickstart/build.gradle
@@ -50,7 +50,7 @@ android {
 
 dependencies {
     testImplementation 'junit:junit:4.12'
-
+    compile group: "com.twilio.sdk", name: "twilio", version: "7.17.+"
     implementation "com.twilio:video-android:${versions.videoAndroid}"
     implementation "com.koushikdutta.ion:ion:${versions.ion}"
     implementation "com.android.support:appcompat-v7:${versions.supportLibrary}"
